--- a/resources/assets/walker/styles/layouts/content.less
+++ b/resources/assets/walker/styles/layouts/content.less
@@ -8,5 +8,6 @@
             width: 1085px;
         }
     }
+    overflow-x: scroll;
     .rem("margin-bottom", @base-space);
 }
